--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/30/n11691825.md#1" target="_blank">【馨香雅句】天地有大美而不言——时令之序</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/30/n11691825.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3ae7294e9b7bb3459b26475e11d5b31a-150x120.jpg" align ="left"></a>欢迎来到馨香雅句，我是雅兰。在中国文化里，人们讲“上下四方为宇，古往今来为宙”，也就是构成自然的时间和空间，我们首先来看看古人发现的关于时令的秩序吧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11742893.md#1" target="_blank">五律：酒（一）</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11742893.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/libai-drunk-150x120.jpg" align ="left"></a>渊明独携醉，太白共和声。 无米折腰贵，举杯当月茕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11742417.md#1" target="_blank">教你做黏土圣诞立卡</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/24/n11742417.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_4703-150x120.jpg" align ="left"></a>用黏土捏塑的充满圣诞气氛的元素小巧又漂亮，一起来制作并妆点卡片送给他人，让他们一起来感受这份爱的温馨吧！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:51 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/9/20/n11535183.md#1" target="_blank">用舌头“耕种”的汉朝大臣贾逵</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/9/20/n11535183.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/df79df1d817295dcd768fbb6ebabecc3-150x120.jpg" align ="left"></a>人们说：“贾逵不是用体力耕田，获取收成，而是用嘴讲授经典史着，用舌头来‘耕种’啊。”从此舌耕成为教书人的代名词。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:24 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746987.md#1" target="_blank">唐浩：勿信勿迷</a><br></h3>赤龙乱尘喷迷毒   斗争世人惑坠雾   金银藏祸瞒欲心   幻梦倏醒断生路......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11745239.md#1" target="_blank">五律：酒（三）</a><br></h3> 常解红尘意，万缘都是情。 愁时同泣泪，喜处与欢声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11745115.md#1" target="_blank">唐浩：香江预</a><br></h3>恶法连连无底线   邪丑癫狂舞黑剑   众业缠身妖自焚   红霾消溃故园现......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/25/n11745238.md#1" target="_blank">五律：酒（二）</a><br></h3>此来亲道骨，何去带仙风。
