--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -27,7 +27,6 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11720506.md#1" target="_blank">天地清明引(143) 东流水－宫椽倾圮2</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/13/n11720506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/Peach_Festival_of_the_Queen_Mother_of_the_West_Freer_Gallery_of_Art-150x120.jpg" align ="left"></a>刑部大牢，金海困于此地已有三日之久。眼见残酷刑罚，耳听严刑拷打，口尝馊饭脏水，鼻闻血腥恶臭，每日每夜惊吓不已，胡思乱想，险些又疯癫过去。是日，牢门再开，被两个衙役拖了出去，一桶冰水从头浇到脚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716394.md#1" target="_blank">【三国英雄】之六：曹操的张良和青州兵</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/11/n11716394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ad563d3fb25ead5c3c447234f33cecaa-150x120.jpg" align ="left"></a>青州兵从黄巾军起家，被曹操收编，跟随曹操征战四方，在曹操去世后解散，就像上天给予曹操的兵器，随着曹操走上历史舞台，又随着曹操走下历史舞台，让人唏嘘不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/19/n11666426.md#1" target="_blank">【馨香雅句】天地有大美而不言——时令之美</a><br></h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/11/19/n11666426.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bb24246b23689719ee2e4543c53f6005-150x120.jpg" align ="left"></a>生活中当人们心生烦恼，往往会寄情于山水，无论是“掬水月在手，弄花香满衣”还是“空山新雨后，天气晚来秋，明月松间照，清泉石上流”，又或是“疏影横斜水清浅，暗香浮动月黄昏”，人们在自然之中让心灵得以释放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:12 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738830.md#1" target="_blank">五律：诗（四）</a><br></h3> 明月长挥景，幽篁好抚琴。 庄生梦蝴蝶，望帝寄春心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/23/n11739866.md#1" target="_blank">唐浩：全球反共</a><br></h3>红朝败落假大空   暴恶残民亿万蒙   四海围击正气聚   百年赤祸散尘空......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738924.md#1" target="_blank">青春期的我们需要家长的理解和关心</a><br></h3>青春期的我们，受到激素的影响，心中会有很多的想法............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738834.md#1" target="_blank">新诗：拥抱归来的春天</a><br></h3> 投身法道， 用时光搅碎苦难。 收起眼泪， 汇成一湖天水， 摆渡追回的岁月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:12 AM			</td></tr>
@@ -36,5 +35,6 @@
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/22/n11738825.md#1" target="_blank">诗歌：除旧迎新</a><br></h3> 瑞雪纷飞鼠岁临， 红楼晃荡瞬间倾。 魔销神现人归正， 万物更新永世兴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 10:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/21/n11737381.md#1" target="_blank">诗歌：谁是我，我是谁？</a><br></h3> 死死生生复轮回，千诘百问我是谁？ 谁是我？我是谁？历史车轮滚滚推。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/21/n11736362.md#1" target="_blank">诗歌：英雄歌</a><br></h3>纵横疆场为家国 忠肝义胆壮山河 侠骨英风青史颂 浩气千古荡长歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:10 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/20/n11735539.md#1" target="_blank">五律：诗（二）</a><br></h3> 抖擞重霄下，落尘天上尊。 大音发星斗，高响动乾坤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/osnkrv285/djy/blob/master/gb/news2007_2.md#1<br><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/news2007_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_2.htm">http://www.epochtimes.com/gb/news2007_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
